fixed input sizing issue on mobile

--- a/src/components/ContactForm/styles.css
+++ b/src/components/ContactForm/styles.css
@@ -30,6 +30,7 @@
     font-family: 'Poppins', sans-serif;
     background-color: #243B55 !important;
     border: none;
+    width: calc(100% - 1rem);
 }
 
 .ContactForm_textarea {
